Fix double scrollbar

--- a/src/style.css
+++ b/src/style.css
@@ -15,6 +15,13 @@
 
 body {
   margin: 0;
+  overflow: hidden;
+  height: 100vh;
+}
+
+#app {
+  display: flex;
+  height: 100%;
 }
 
 a {
